Temporarily disable 'Add to Gallery' feature
- Commented out 'Add to Gallery' buttons on polaroids
- Disabled gallery upload functionality
- Gallery view button now shows 'temporarily disabled' message
- Email feature still works
- Users can still take photos, flip, and download collage

--- a/photobooth.html
+++ b/photobooth.html
@@ -1278,7 +1278,7 @@
             <div class="polaroid-front">
               <img src="${imgSrc}">
               <div class="polaroid-actions">
-                  <button class="polaroid-share-btn">Add to Gallery</button>
+                  <!-- <button class="polaroid-share-btn">Add to Gallery</button> -->
                   <button class="polaroid-email-btn" title="Send via Email">Email</button>
               </div>
               <button class="flip-btn" title="Flip to back">↻</button>
@@ -1287,7 +1287,7 @@
             </div>
           <div class="polaroid-back">
              <div class="polaroid-actions">
-                  <button class="polaroid-share-btn">Add to Gallery</button>
+                  <!-- <button class="polaroid-share-btn">Add to Gallery</button> -->
                   <button class="polaroid-email-btn" title="Send via Email">Email</button>
               </div>
             <button class="flip-btn" title="Flip to front">↻</button>
@@ -1315,19 +1315,20 @@
             div.classList.toggle('flipped');
         }));
 
-        const shareBtns = div.querySelectorAll('.polaroid-share-btn');
-        shareBtns.forEach(shareBtn => {
-          shareBtn.addEventListener('click', (e) => {
-            e.stopPropagation();
-            e.preventDefault();
-            if (hasConfirmedSharing()) {
-              uploadPolaroidImage(div, shareBtn);
-            } else {
-              pendingUpload = { polaroid: div, button: shareBtn };
-              confirmModal.classList.add('open');
-            }
-          });
-        });
+        // Gallery feature temporarily disabled
+        // const shareBtns = div.querySelectorAll('.polaroid-share-btn');
+        // shareBtns.forEach(shareBtn => {
+        //   shareBtn.addEventListener('click', (e) => {
+        //     e.stopPropagation();
+        //     e.preventDefault();
+        //     if (hasConfirmedSharing()) {
+        //       uploadPolaroidImage(div, shareBtn);
+        //     } else {
+        //       pendingUpload = { polaroid: div, button: shareBtn };
+        //       confirmModal.classList.add('open');
+        //     }
+        //   });
+        // });
 
         const emailBtns = div.querySelectorAll('.polaroid-email-btn');
         emailBtns.forEach(btn => {
@@ -1470,11 +1471,12 @@
 
       function closeConfirmModal() { confirmModal.classList.remove('open'); }
       
-      // Gallery Modal Logic
+      // Gallery Modal Logic - temporarily disabled
       galleryTrigger.addEventListener('click', (e) => {
           e.preventDefault();
-          galleryModal.classList.add('open');
-          fetchGallery();
+          alert('Gallery feature is temporarily disabled.');
+          // galleryModal.classList.add('open');
+          // fetchGallery();
       });
       
       galleryClose.addEventListener('click', closeGalleryModal);
@@ -1733,7 +1735,7 @@
         function dragStart(e) {
           if (
             e.target.closest('.caption-main') ||
-            e.target.closest('.polaroid-share-btn') ||
+            // e.target.closest('.polaroid-share-btn') ||
             e.target.closest('.polaroid-email-btn') ||
             e.target.closest('.flip-btn')
           ) return;
