Fix GitHub link and remove gallery feature
- Updated GitHub link to point to Jacky040124 repositories
- Removed view gallery feature (button, modal, and related functionality)
- Removed gallery-related JavaScript functions and event listeners
- Removed gallery-related CSS styles
- Updated README to reflect removed gallery feature

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </a>
 
     <a
-      href="https://github.com/Jacky040124/cursor-photobooth"
+      href="https://github.com/Jacky040124?tab=repositories"
       target="_blank"
       rel="noopener noreferrer"
       class="twitter-link github-link"
@@ -118,6 +118,14 @@
     <div class="flash" id="flash"></div>
     <canvas id="canvas" style="display: none"></canvas>
 
+    <!-- Bottom Navigation -->
+    <!-- Gallery feature removed -->
+
+    <!-- Confirmation Modal -->
+    <!-- Gallery feature removed -->
+
+    <!-- Gallery Modal -->
+    <!-- Gallery feature removed -->
 
     <!-- Email Modal -->
     <div class="email-modal" id="email-modal">
