Update operating guide: change step 2 to 'DRAG TO DESK' and add step 3 'CAPTION & SHARE'

--- a/index.html
+++ b/index.html
@@ -115,6 +115,27 @@
     </div>
 
     <div class="desk-zone" id="desk"></div>
+
+    <!-- Operating Guide Card -->
+    <div class="instruction-card">
+      <div class="tape"></div>
+      <div class="instruction-header">OPERATING GUIDE</div>
+      <div class="instruction-list">
+        <div class="instruction-step">
+          <span class="step-num">01</span>
+          <span class="step-text">PRESS SHUTTER</span>
+        </div>
+        <div class="instruction-step">
+          <span class="step-num">02</span>
+          <span class="step-text">DRAG TO DESK</span>
+        </div>
+        <div class="instruction-step">
+          <span class="step-num">03</span>
+          <span class="step-text">CAPTION & SHARE</span>
+        </div>
+      </div>
+    </div>
+
     <div class="flash" id="flash"></div>
     <canvas id="canvas" style="display: none"></canvas>
 
